--- a/src/data/projectData.json
+++ b/src/data/projectData.json
@@ -5,7 +5,7 @@
       "skills": ["React", "Tailwind CSS", "Node.js"],
       "image": "https://uicreative.s3.ap-southeast-1.amazonaws.com/wp-content/uploads/2020/05/22052929/illustration-landing-pages-popular-e-commerce.jpg",
       "github": "https://github.com/sharmadivay/Ecommerce.git",
-      "deploy": "https://my-awesome-project.com"
+      "deploy": "https://ecommerce-343f.onrender.com"
     },
    
     {
